tests/sksl/errors/ProgramTooLarge_Stack.glsl
### Compilation failed:

error: 10: variable 'big_chungus' exceeds the stack size limit
    S big_chungus;
    ^^^^^^^^^^^^^
1 error
